...
                  vertical: 32,
                ),
                child: Column(
                  children: [
                    _CartaoDePerfil(
                      emoji: 'person',
                      titulo: 'Sou Professor(a)',
                      descricao:
                          'Cadastre questões, acompanhe turmas e visualize relatórios pedagógicos',
                      cor: AppColors.purple,
                      onTap: () => Navigator.pushNamed(
                        context,
                        Rotas.registerTeacher,
                      ),
                    ),
                    const SizedBox(height: 16),
                    _CartaoDePerfil(
                      emoji: 'sports_esports',
                      titulo: 'Sou Aluno(a)',
                      descricao:
                          'Jogue, aprenda, suba no ranking e desafie seus colegas',
                      cor: AppColors.green,
                      onTap: () => Navigator.pushNamed(
                        context,
                        Rotas.registerStudent,
...
