...
          child: Row(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              Icon(Icons.logout, size: 20, color: AppColors.danger),
              SizedBox(width: 8),
              Text(
                'Sair da Conta',
                style: TextStyle(
                  fontFamily: AppTheme.poppins,
                  fontWeight: FontWeight.w600,
                  fontSize: 15,
                  color: AppColors.danger,
                ),
...
